--- a/app/views/index.html
+++ b/app/views/index.html
@@ -128,6 +128,13 @@
                                             "data-machine": "nottinghamcity.gov.uk"
                                         }
                                     },
+                                     {
+                                        value: "Pinnacle People",
+                                        text: "Pinnacle People",
+                                        attributes: {
+                                            "data-machine": "pinnaclepeople.co.uk"
+                                        }
+                                    },
                                     {
                                         value: "London Borough of Croydon Council",
                                         text: "London Borough of Croydon Council",
