--- a/app/views/v7/l2-requester/users/add/check-details.html
+++ b/app/views/v7/l2-requester/users/add/check-details.html
@@ -55,7 +55,7 @@
               Organisation
             </dt>
             <dd class="govuk-summary-list__value">
-             {{ data['organisation-name-existing'] }}
+             {{ data['organisation-name-existing'] }} {{ data['organisation-name-custom'] }}
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
