--- a/app/views/v7/l2-requester/users/add/confirmation.html
+++ b/app/views/v7/l2-requester/users/add/confirmation.html
@@ -18,7 +18,7 @@
     {% endset %}
 
     {% set panelContent %}
-            {{ data["user-first-name"] }} {{ data['user-last-name'] }}, {{ data['organisation-name-existing'] }} 
+            {{ data["user-first-name"] }} {{ data['user-last-name'] }}, {{ data['organisation-name-existing'] }} {{ data['organisation-name-custom'] }}
     {% endset %}
 
     <div class="govuk-grid-row">
