Changes to add new org journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -308,6 +308,9 @@
                  <li>
                     Added revised <a href="/v7/l2-requester/users/add/start">add new user</a> journey for requests/authorisations inc. new user metadata</a>  
                 </li>
+                <li>
+                    Added revised <a href="/v7/l2-requester/orgs/add/start">add new organisation</a> journey for requests/authorisations 
+                </li>
             </ul>
 
             <h3 class="govuk-heading-s">Confidence level</h3>
