--- a/app/views/v7/l2-requester/orgs/add/confirmation.html
+++ b/app/views/v7/l2-requester/orgs/add/confirmation.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Organisation added - {{ data['organisation-name-custom'] }}
+  New organisation request sent - {{ data['organisation-name-custom'] }}
 {% endblock %}
 
 {% block header %}
