Added new orgs to index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -129,6 +129,20 @@
                                         }
                                     },
                                      {
+                                        value: "Pluss",
+                                        text: "Pluss",
+                                        attributes: {
+                                            "data-machine": "pluss.org.uk"
+                                        }
+                                    },
+                                    {
+                                        value: "The Growth Company",
+                                        text: "The Growth Company",
+                                        attributes: {
+                                            "data-machine": "growthco.uk"
+                                        }
+                                    },
+                                    {
                                         value: "Pinnacle People",
                                         text: "Pinnacle People",
                                         attributes: {
