--- a/app/views/v7/l2-requester/dashboard.html
+++ b/app/views/v7/l2-requester/dashboard.html
@@ -12,13 +12,42 @@
 <h1 class="govuk-heading-l">{{ data['prototype-service'] }}</h1>
 
 <div class="govuk-cards govuk-cards--2">
+
+
+<div class="govuk-cards--2__item govuk-card--dashboard">
+        <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Your requests</h2>
+
+        <p class="govuk-heading-xl govuk-!-margin-bottom-5">
+            <span class="govuk-visually-hidden">There are currently</span>
+           
+                {% if data['user-first-name'] and data['user-last-name'] %}
+                    4
+                {% else %}
+                    3
+                {% endif %}
+
+            <span class="govuk-visually-hidden">requests awaiting authorisation</span>
+        </p>
+
+        <ul class="govuk-list">
+
+            <li>
+                <a href="requests/view/all" class="govuk-link">View all requests</a>
+            </li>
+        </ul>
+    </div>
+
+
+
+
+
+
     <div class="govuk-cards--2__item govuk-card--dashboard">
         <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Organisations</h2>
 
         <p class="govuk-heading-xl govuk-!-margin-bottom-5">
             <span class="govuk-visually-hidden">There are currently</span>
 
-           
                 6
 
             <span class="govuk-visually-hidden">organisations in the system</span>
