--- a/app/views/v7/l2-requester/requests/view/single-new-user.html
+++ b/app/views/v7/l2-requester/requests/view/single-new-user.html
@@ -82,14 +82,6 @@
                     },
                     {
                         key: {
-                            text: "Requested by"
-                        },
-                        value: {
-                            html: "Paul Smith"
-                        }
-                    },
-                    {
-                        key: {
                             text: "Date"
                         },
                         value: {
@@ -100,45 +92,10 @@
             }) }}
 
             <form id="form" method="post" action="authorise-branch">
-                 {% set rejectHtml %}
-                    {{ govukInput({
-                        id: "rejection-reason",
-                        name: "rejection-reason",
-                        classes: "govuk-!-width-two-thirds",
-                        label: {
-                            text: "Reason for rejection"
-                        }
-                    }) }}
-                {% endset -%}
+                 
 
-                {{ govukRadios({
-                    classes: "govuk-radios",
-                    idPrefix: "authorise-request",
-                    name: "authorise-request",
-                    fieldset: {
-                        legend: {
-                            text: "Approve the request?",
-                            isPageHeading: true,
-                            classes: "govuk-fieldset__legend--m"
-                        }
-                    },
-                    items: [
-                        {
-                            value: "request-authorised",
-                            text: "Yes"
-                        },
-                        {
-                            value: "request-rejected",
-                            text: "No, reject the request",
-                                    conditional: {
-                                html: rejectHtml
-                            }
-                        }
-                    ]
-                }) }}
-
-                <button type="submit" class="govuk-button govuk-!-margin-right-1" id="submit">
-                    Continue
+                <button type="submit" class="govuk-button govuk-button--secondary" id="submit">
+                    Delete this request
                 </button>
             </form>
 
