Updates to authoriser/requester journey

--- a/app/views/v7/l2-authoriser/requests/view/all.html
+++ b/app/views/v7/l2-authoriser/requests/view/all.html
@@ -29,6 +29,7 @@
                         <th scope="col" class="govuk-table__header">Name</th>
                         <th scope="col" class="govuk-table__header">Requester</th>
                         <th scope="col" class="govuk-table__header">Date</th>
+                        <th scope="col" class="govuk-table__header">Status</th>
                     </tr>
                 </thead>
 
@@ -43,17 +44,17 @@
                                     New user
                                 </a>
                             </th>
-
                             <td class="govuk-table__cell govuk-table__cell">
                             Dave Evans
                             </td>
-
                             <td class="govuk-table__cell govuk-table__cell">
                             Paul Smith
                             </td>
-
                             <td class="govuk-table__cell">
                                 21 March 2020
+                            </td>
+                            <td class="govuk-table__cell">
+                                Requested
                             </td>
                         </tr>
                     {% endif %}
@@ -66,17 +67,17 @@
                                 New user
                             </a>
                         </th>
-
                         <td class="govuk-table__cell govuk-table__cell">
                            Amijit Bhoghal
                         </td>
-
                         <td class="govuk-table__cell govuk-table__cell">
                             Paul Smith
                         </td>
-
                         <td class="govuk-table__cell">
                             20 March 2020
+                        </td>
+                        <td class="govuk-table__cell">
+                            Requested
                         </td>
                     </tr>
 
@@ -92,17 +93,17 @@
                                     New organisation
                                 </a>
                             </th>
-
                             <td class="govuk-table__cell govuk-table__cell">
                             Calderdale Metropolitan Borough Council
                             </td>
-
                             <td class="govuk-table__cell govuk-table__cell">
                             Paul Smith
                             </td>
-
                             <td class="govuk-table__cell">
                                 19 March 2020
+                            </td>
+                            <td class="govuk-table__cell">
+                                Requested
                             </td>
                         </tr>
                     {% endif %}
@@ -116,17 +117,17 @@
                                 New user
                             </a>
                         </th>
-
                         <td class="govuk-table__cell govuk-table__cell">
                            Susanna Reid
                         </td>
-
                         <td class="govuk-table__cell govuk-table__cell">
                             Dan Heath
                         </td>
-
                         <td class="govuk-table__cell">
                             19 March 2020
+                        </td>
+                        <td class="govuk-table__cell">
+                            Requested
                         </td>
                     </tr>
 
@@ -140,17 +141,17 @@
                                     Delete user
                                 </a>
                             </th>
-
                             <td class="govuk-table__cell govuk-table__cell">
                             Ben Walker
                             </td>
-
                             <td class="govuk-table__cell govuk-table__cell">
                                 Paul Smith
                             </td>
-
                             <td class="govuk-table__cell">
                                 19 March 2020
+                            </td>
+                            <td class="govuk-table__cell">
+                                Requested
                             </td>
                         </tr>
                     {% endif %}
@@ -162,18 +163,17 @@
                                 Delete user
                             </a>
                         </th>
-
                          <td class="govuk-table__cell govuk-table__cell">
                            Emma Smith
                         </td>
-
-
                         <td class="govuk-table__cell govuk-table__cell">
                             Dan Heath
                         </td>
-
                         <td class="govuk-table__cell">
                             19 March 2020
+                        </td>
+                        <td class="govuk-table__cell">
+                            Requested
                         </td>
                     </tr>
                    
