--- a/app/views/v7/l2-requester/requests/view/all.html
+++ b/app/views/v7/l2-requester/requests/view/all.html
@@ -27,6 +27,7 @@
                         <th scope="col" class="govuk-table__header">Type</th>
                         <th scope="col" class="govuk-table__header">Name</th>
                         <th scope="col" class="govuk-table__header">Date</th>
+                        <th scope="col" class="govuk-table__header">Status</th>
                     </tr>
                 </thead>
 
@@ -41,14 +42,14 @@
                                     New user
                                 </a>
                             </th>
-
                             <td class="govuk-table__cell govuk-table__cell">
                             Dave Evans
                             </td>
-
-
                             <td class="govuk-table__cell">
                                 21 March 2020
+                            </td>
+                            <td class="govuk-table__cell">
+                                Requested
                             </td>
                         </tr>
                     {% endif %}
@@ -61,15 +62,14 @@
                                 New user
                             </a>
                         </th>
-
                         <td class="govuk-table__cell govuk-table__cell">
                            Amijit Bhoghal
                         </td>
-
-  
-
                         <td class="govuk-table__cell">
                             20 March 2020
+                        </td>
+                        <td class="govuk-table__cell">
+                            Requested
                         </td>
                     </tr>
 
@@ -85,15 +85,14 @@
                                     New organisation
                                 </a>
                             </th>
-
                             <td class="govuk-table__cell govuk-table__cell">
                             Calderdale Metropolitan Borough Council
                             </td>
-
-
-
                             <td class="govuk-table__cell">
                                 19 March 2020
+                            </td>
+                            <td class="govuk-table__cell">
+                                Requested
                             </td>
                         </tr>
                     {% endif %}
@@ -113,15 +112,14 @@
                                     Delete user
                                 </a>
                             </th>
-
                             <td class="govuk-table__cell govuk-table__cell">
                             Ben Walker
                             </td>
-
-
-
                             <td class="govuk-table__cell">
                                 19 March 2020
+                            </td>
+                            <td class="govuk-table__cell">
+                                Requested
                             </td>
                         </tr>
                     {% endif %}
