--- a/app/views/v7/l2-requester/requests/view/single-delete-user.html
+++ b/app/views/v7/l2-requester/requests/view/single-delete-user.html
@@ -91,7 +91,7 @@
 
             <form id="form" method="post" action="authorise-delete-user-branch">
                <button type="submit" class="govuk-button govuk-button--secondary" id="submit">
-                    Delete this request
+                    Cancel this request
                 </button>
             </form>
 
