--- a/app/views/v7/l2-requester/requests/view/single-new-organisation.html
+++ b/app/views/v7/l2-requester/requests/view/single-new-organisation.html
@@ -46,7 +46,7 @@
              
 
                <button type="submit" class="govuk-button govuk-button--secondary" id="submit">
-                    Delete this request
+                    Cancel this request
                 </button>
             </form>
 
