--- a/app/views/v7/l2-requester/requests/view/single-new-user.html
+++ b/app/views/v7/l2-requester/requests/view/single-new-user.html
@@ -95,7 +95,7 @@
                  
 
                 <button type="submit" class="govuk-button govuk-button--secondary" id="submit">
-                    Delete this request
+                    Cancel this request
                 </button>
             </form>
 
