Health contact updates for DevReady 2

--- a/app/views/dev2/l4/users/register/complete.html
+++ b/app/views/dev2/l4/users/register/complete.html
@@ -57,17 +57,17 @@
 
                 <p>
                     Opening times:<br>
-                    <strong>Monday to Friday: 9:00am to 4:00pm</strong>
+                    <strong>Monday to Friday: 8:00am to 4:30pm</strong>
                 </p>
 
                 <p>
                     Telephone:<br>
-                    <strong>0345 604 5406</strong>
+                    <strong>01253 843 812</strong>
                 </p>
 
                 <p>
                     Email:<br>
-                    <a href="#" class="govuk-link">htds.support@dwp.gov.uk</a>
+                    <a href="#" class="govuk-link">DigitalHealth.livesupport@dwp.gov.uk</a>
                 </p>
             {% elseif data['prototype-service'] == 'ESF' %}
                 <p>ESF Operational Support Team</p>
