--- a/app/views/v7/l2/users/search/search-results-none.html
+++ b/app/views/v7/l2/users/search/search-results-none.html
@@ -14,13 +14,13 @@
 
 {% block content %}
 
-{% if data['user-search'] | lower == 'jacob.burns@capita.co.uk' %}
+{% if data['user-search'] | lower == 'jacob.burns@growthco.uk' %}
 <script>
     window.location.href = 'search-results-success-jb'
 </script>
 {% endif %}
 
-{% if data['user-search'] | lower == 'harpal.singh@remploy.co.uk' %}
+{% if data['user-search'] | lower == 'harpal.singh@growthco.uk' %}
 <script>
     window.location.href = 'search-results-success-hs'
 </script>
