Added new organisation

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -150,6 +150,13 @@
                                         }
                                     },
                                     {
+                                        value: "Shaw Trust",
+                                        text: "Shaw Trust",
+                                        attributes: {
+                                            "data-machine": "shaw-trust.org.uk"
+                                        }
+                                    },
+                                    {
                                         value: "London Borough of Croydon Council",
                                         text: "London Borough of Croydon Council",
                                         attributes: {
