--- a/app/views/v7/l3/users/search/search-results-none.html
+++ b/app/views/v7/l3/users/search/search-results-none.html
@@ -14,19 +14,19 @@
 
 {% block content %}
 
-{% if data['user-search'] | lower == 'jacob.burns@growthco.uk' %}
+{% if data['user-search'] | lower == 'jacob.burns@shaw-trust.org.uk' %}
 <script>
     window.location.href = 'search-results-success-jb'
 </script>
 {% endif %}
 
-{% if data['user-search'] | lower == 'harpal.singh@growthco.uk' %}
+{% if data['user-search'] | lower == 'harpal.singh@shaw-trust.org.uk' %}
 <script>
     window.location.href = 'search-results-success-hs'
 </script>
 {% endif %}
 
-{% if data['user-search'] | lower == 'steve.hodge@growthco.uk' %}
+{% if data['user-search'] | lower == 'steve.hodge@shaw-trust.org.uk' %}
 <script>
     window.location.href = 'search-results-success-sh'
 </script>
