Updates to confidence levels

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -404,10 +404,17 @@
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/v7/l2/users/reset-password/start">Password reset</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"><a href="/v7/l2/signin">Sign out</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Tested well with 4 users, needs testing with a few more users</td>
+                        <td class="govuk-table__cell">Tested well with 5 users</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/reset-password/start">Password reset</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Tested well with 9 users</td>
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -467,6 +474,20 @@
                     </tr>
 
                     <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/add-multiple-orgs/start">Add a new user to multiple organisations</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2/users/add-multiple-orgs-checkboxes/details">Add a new user to multiple organisations - alternate journey</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/view/single">User details</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
@@ -485,6 +506,55 @@
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Tested well and will work for MVP, possible redundant page, might be worth testing without this page in the future</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2-requester/dashboard">L2 Requester dashboard</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2-requester/users/add/start">L2 Requester - add a new user</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2-requester/orgs/add/start">L2 Requester - add a new organisation</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2-requester/requests/view/all">L2 Requester - requests list</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2-requester/dashboard">L2 Authoriser dashboard</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2-authoriser/requests/view/all">L2 Authoriser - tasks list</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v7/l2-authoriser/requests/view/single-new-user">L2 Authoriser - authorise request</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
                 </tbody>
             </table>
